June 2024 Samples Update
* CimFSAPI: Add CimReadFile and CimGetFileStatBasicInformation
* Freshening various network samples: Adding ARM64, updating SDK, toolchain, and NuGet packages, updating READMEs
* New samples: PowerSettingRegisterNotification, PowerGrid, VbsEnclave, PersonalDataEncryption

--- a/Samples/PersonalDataEncryption/cppwinrt/PersonalDataEncryption.vcxproj.filters
+++ b/Samples/PersonalDataEncryption/cppwinrt/PersonalDataEncryption.vcxproj.filters
@@ -15,22 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="NetworkListManagerSample.cpp">
+    <ClCompile Include="PersonalDataEncryption.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Utility.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Utility.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
 </Project>
