--- a/Samples/VbsEnclave/Test Enclave/Test Enclave.vcxproj.filters
+++ b/Samples/VbsEnclave/Test Enclave/Test Enclave.vcxproj.filters
@@ -15,22 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="NetworkListManagerSample.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Utility.cpp">
+    <ClCompile Include="enclave.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Utility.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
+    <ClInclude Include="precomp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="vbsenclave.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
